Added the h1 and the links to the footer

--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forecast App</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Welcome to the Forecast App</h1>
-    <footer>Coded by Marta Pargana</footer>
-</body>
+    <footer>
+      Coded by
+      <a href="https://github.com/martaPargana" target="_blank"
+        >Marta Pargana</a
+      >
+      code hosted on
+      <a href="https://github.com/martaPargana/Forecast" target="_blank"
+        >GitHub</a
+      >
+      and website hosted on
+      <a href="https://main--forecastshecodesapp.netlify.app/" target="_blank"
+        >Netlify</a
+      >
+    </footer>
+  </body>
 </html>
