--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <a href="https://github.com/martaPargana" target="_blank"
         >Marta Pargana</a
       >
-      code hosted on
+      is
       <a href="https://github.com/martaPargana/Forecast" target="_blank"
-        >GitHub</a
+        >open sourced on GitHub</a
       >
-      and website hosted on
+      and hosted on
       <a href="https://main--forecastshecodesapp.netlify.app/" target="_blank"
         >Netlify</a
       >
