Added content to the HTML body

--- a/index.html
+++ b/index.html
@@ -6,9 +6,26 @@
     <title>Forecast App</title>
   </head>
   <body>
-    <h1>Welcome to the Forecast App</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city..." required />
+        <input type="submit" name="" id="" value="Search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Paris</h1>
+        <p>
+          Thursday 15:17, clear sky
+          <br />
+          Humidity: <strong>57%</strong>, Wind: <strong>5.14km/h</strong>
+        </p>
+      </div>
+      <div>🌤 12ºC</div>
+    </main>
+
     <footer>
-      Coded by
+      This project was coded by
       <a href="https://github.com/martaPargana" target="_blank"
         >Marta Pargana</a
       >
