--- a/index.html
+++ b/index.html
@@ -3,40 +3,49 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/styles.css" />
     <title>Forecast App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a city..." required />
-        <input type="submit" name="" id="" value="Search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Paris</h1>
-        <p>
-          Thursday 15:17, clear sky
-          <br />
-          Humidity: <strong>57%</strong>, Wind: <strong>5.14km/h</strong>
-        </p>
-      </div>
-      <div>🌤 12ºC</div>
-    </main>
+    <div class="weather-app">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city..." required />
+          <input type="submit" name="" id="" value="Search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Paris</h1>
+          <p>
+            Thursday 15:17, clear sky
+            <br />
+            Humidity: <strong>57%</strong>, Wind: <strong>5.14km/h</strong>
+          </p>
+        </div>
+        <div>🌤 12ºC</div>
+      </main>
 
-    <footer>
-      This project was coded by
-      <a href="https://github.com/martaPargana" target="_blank"
-        >Marta Pargana</a
-      >
-      is
-      <a href="https://github.com/martaPargana/Forecast" target="_blank"
-        >open sourced on GitHub</a
-      >
-      and hosted on
-      <a href="https://main--forecastshecodesapp.netlify.app/" target="_blank"
-        >Netlify</a
-      >
-    </footer>
+      <footer>
+        This project was coded by
+        <a href="https://github.com/martaPargana" target="_blank"
+          >Marta Pargana</a
+        >
+        is
+        <a href="https://github.com/martaPargana/Forecast" target="_blank"
+          >open sourced on GitHub</a
+        >
+        and hosted on
+        <a href="https://main--forecastshecodesapp.netlify.app/" target="_blank"
+          >Netlify</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
