--- a/index.html
+++ b/index.html
@@ -15,21 +15,33 @@
   <body>
     <div class="weather-app">
       <header>
-        <form>
-          <input type="search" placeholder="Enter a city..." required />
-          <input type="submit" name="" id="" value="Search" />
+        <form class="search-form">
+          <input
+            type="search"
+            class="search-form-input"
+            placeholder="Enter a city..."
+            required
+          />
+          <input type="submit" class="search-form-button" value="Search" />
         </form>
       </header>
       <main>
-        <div>
-          <h1>Paris</h1>
-          <p>
-            Thursday 15:17, clear sky
-            <br />
+        <div class="weather-app-data">
+          <div>
+            <h1 class="weather-app-city">Paris</h1>
+            <p class="weather-app-details">
+              Thursday 15:17, clear sky
+              <br />
             Humidity: <strong>57%</strong>, Wind: <strong>5.14km/h</strong>
-          </p>
+            </p>
+          </div>
+          <div >
+          <div class="weather-app-temperature-container">
+            <div class="weather-app-icon">🌤</div>
+            <div class="weather-app-temperature">12</div>
+            <div class="weather-app-unit">ºC</div>
+          </div>
         </div>
-        <div>🌤 12ºC</div>
       </main>
 
       <footer>
