--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
   <body>
     <div class="weather-app">
       <header>
-        <form class="search-form">
+        <form class="search-form" id="search-form">
           <input
             type="search"
             class="search-form-input"
+            id="search-form-input"
             placeholder="Enter a city..."
             required
           />
@@ -28,7 +29,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city">Paris</h1>
+            <h1 class="weather-app-city" id="city">Paris</h1>
             <p class="weather-app-details">
               Thursday 15:17, clear sky
               <br />
@@ -59,5 +60,6 @@
         >
       </footer>
     </div>
+    <script src="src/index.js"></script>
   </body>
 </html>
