--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city" id="city">Paris</h1>
+            <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
               Thursday 15:17, clear sky
               <br />
@@ -40,7 +40,7 @@
           <div >
           <div class="weather-app-temperature-container">
             <div class="weather-app-icon">🌤</div>
-            <div class="weather-app-temperature">12</div>
+            <div class="weather-app-temperature" id="temperature">12</div>
             <div class="weather-app-unit">ºC</div>
           </div>
         </div>
