--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
           <div>
             <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
-              Thursday 15:17, clear sky
+              <span id="time"></span>, <span id="description"></span>
               <br />
-            Humidity: <strong>57%</strong>, Wind: <strong>5.14km/h</strong>
+            Humidity: <strong id="humidity"></strong>, Wind: <strong id="wind-speed"></strong>
             </p>
           </div>
           <div >
