Injected the icon functiont in JS  and adjusted some CSS proportions

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
           <div >
           <div class="weather-app-temperature-container">
-            <div class="weather-app-icon">🌤</div>
+            <div id="icon"></div>
             <div class="weather-app-temperature" id="temperature">12</div>
             <div class="weather-app-unit">ºC</div>
           </div>
