Added the forecast HTML and CSS

--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
             <p class="weather-app-details">
               <span id="time"></span>, <span id="description"></span>
               <br />
-            Humidity: <strong id="humidity"></strong>, Wind: <strong id="wind-speed"></strong>
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed"></strong>
             </p>
           </div>
-          <div >
+
           <div class="weather-app-temperature-container">
             <div id="icon"></div>
             <div class="weather-app-temperature" id="temperature">12</div>
@@ -45,6 +46,25 @@
           </div>
         </div>
       </main>
+
+      <div class="weather-forecast">
+        <div class="row">
+          <div class="col-2">
+            <div class="weather-forecast-date">Thue</div>
+            <img
+              src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/few-clouds-day.png"
+              alt=""
+              width="36"
+            />
+            <div class="weather-forecast-temperatures">
+              <span class="weather-forecast-temperature-maximum">
+                18º</span>
+              <span class="weather-forecast-temperature-minimum">
+                12º</span>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <footer>
         This project was coded by
