--- a/index.html
+++ b/index.html
@@ -47,24 +47,7 @@
         </div>
       </main>
 
-      <div class="weather-forecast">
-        <div class="row">
-          <div class="col-2">
-            <div class="weather-forecast-date">Thue</div>
-            <img
-              src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/few-clouds-day.png"
-              alt=""
-              width="36"
-            />
-            <div class="weather-forecast-temperatures">
-              <span class="weather-forecast-temperature-maximum">
-                18º</span>
-              <span class="weather-forecast-temperature-minimum">
-                12º</span>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div class="weather-forecast" id="forecast"></div>
 
       <footer>
         This project was coded by
